# DoDo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Android/: settings.gradle
Android/app/: build.gradle
Android/app/src/androidTest/java/com/example/dodo/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt
Android/app/src/main/java/com/example/dodo/: MainActivity.java
Android/app/src/main/res/values/: themes.xml
Android/app/src/main/res/values-night/: themes.xml
Android/gradle/wrapper/: gradle-wrapper.properties
DoDo/: CMakeLists.txt
DoDo/Source/: dodo.h  dodopch.cpp  dodopch.h
DoDo/Source/Application/: Application.cpp  Application.h
DoDo/Source/Core/: Core.h  Entity.cpp  Entity.h  EntityManager.cpp
DoDo/Source/DoDo/Core/: Core.h  EntityManager.h
DoDo/Source/DoDo/EntryPoint/: EntryPoint.h
DoDo/Source/EntryPoint/: EntryPoint.h
DoDoEditor/: CMakeLists.txt
DoDoEditor/DoDo/Debug/: DoDo.exp
DoDoEditor/Editor/: Test.cpp  Test.h
Tools/Android/scripts/: generate_android_gradle.bat
Tools/Windows/: GenerateProjectFiles.bat
Tools/cmake/: create_gradle_project.cmake
Tools/cmake/template/gradle/: app.build.gradle.in
app/android/: AndroidManifest.xml
app/android/java/com/DoDo/GameEngine/: NativeSampleActivity.java
app/android/res/menu/: main_menu.xml
app/android/res/values/: strings.xml  styles.xml
